sign in using google account has redirect issue

--- a/app/templates/app/login_register.html
+++ b/app/templates/app/login_register.html
@@ -29,7 +29,7 @@
         <input type ="submit" value="Register" />
     </form>
     <p>Already sign up? You can log in here</p>
-    <a href = "{% url 'login' %}">Login</a>
+    <a href = "/account/login">Login</a>
  
 
 
