--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -1,31 +1,24 @@
 {% extends 'main.html' %}
-
 {% block content %}
-
 <style>
     .home-container{
         display:grid;
         grid-template-columns: 1fr 3fr 1fr;
-
     }
-
 </style>
 
 <div class = "home-container">
-
     <div class="topic_header">
         <h2> Topics</h3>
-      
-    <ul class="topics_list">
-        <li>
-        
-            <a href="{% url 'home' %}" class= "active">All <span>{{topic.count}}</span></a>
-        </li>
+        <ul class="topics_list">
+         <li>
+            <a href="{% url 'home' %}" class= "active">All <span>{{ topic.count }}</span></a>
+         </li>
 
-        {% for topic in topics %}
-        <li>
-                <a href = "{% url 'home' %}?q={{topic.name}}">{{topic.name}}<span>{{tipic.room_set.all.count}}</span></a>
-        </li>
+            {% for topic in topics %}
+            <li>
+                <a href = "{% url 'home' %}?q={{topic.name}}">{{ topic.name }} <span>{{ topic.room_set.all.count }}</span></a>
+            </li>
             {% endfor %}
         </ul>
     </div>
@@ -44,12 +37,11 @@
                 &ensp;<a href = "{% url 'delete-room' room.id %}">Delete</a>
                 {% endif %}
                 <br>
-                <a href = "{% url 'user-profile' room.host.id %}">@{{room.host.username}} </a>
-                <h5> {{room.id}} -- <a href= "{% url 'room' room.id %}">{{room.name}}</a> </h5>
-                <small> {{room.topic.name}}</small>
+                <a href = "{% url 'user-profile' room.host.id %}">@{{ room.host.username }} </a>
+                <h5> {{ room.id }} -- <a href= "{% url 'room' room.id %}">{{ room.name }}</a> </h5>
+                <small> {{ room.topic.name }}</small>
                 <hr>
             </div>
-
             {% endfor %}
         </div>
     </div>
@@ -63,10 +55,10 @@
         <hr>
         {% for message in room_messages %}
         <div>
-            <small><a href ="{% url 'user-profile' message.user.id %}"> @{{message.user}} {{ message.created|timesince}}</</small>
-            <small>replied to "{{message.room}} "</small>
+            <small><a href ="{% url 'user-profile' message.user.id %}"> @{{ message.user }} {{ message.created|timesince }}</</small>
+            <small>replied to "{{ message.room }} "</small>
 
-            <p>{{message}}</p>
+            <p>{{ message }}</p>
             {% if request.user == mesage.user %} 
             <a href = "{% url 'delete-message' message.id %}"> Delete</a>
             {% endif %}
