--- a/templates/main.html
+++ b/templates/main.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load socialaccount %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,8 +13,9 @@
 
 </head>
 
+
 <body>
-    {% include 'navbar.html' %}
+    
     <header class="site-header">
         <nav class="navbar navbar-expand-lg navbar-dark bg-secondary fixed-top">
           <div class="container">
@@ -29,10 +31,12 @@
               <div class="navbar-nav">
                 {% if user.is_authenticated %}
         
-                    <a class="nav-item nav-link" href="{% url 'logout'%}">Logout</a>
-                {% else %}
-                    <a class="nav-item nav-link" href="{% url 'login'%}">Login</a>
+                    <a class="nav-item nav-link" href="{% url 'logout'%}">Log out</a>
                     <a class="nav-item nav-link" href="{% url 'register'%}">Register</a>
+                {% else %}
+                    <a class="nav-item nav-link" href="/accounts/login">Log in</a> 
+                    <a class="nav-item nav-link" href="/accounts/signup">Sign up</a> 
+                    
                 {% endif %}
               </div>
             </div>
@@ -40,9 +44,30 @@
         </nav>
       </header>
 
-
-
-
+      <a href ="/">
+        <h1>Boomers 🤝 MillennialZ</h1>
+      </a>
+      
+      {% if request.user.is_authenticated %}
+      <br>
+      <div class = "container" my-5>
+      <p> <b>  Hello {{request.user}}</b> </p>
+      <p>  <b>This is the place where boomers can help each other and contribtue to other generations. </b></p>
+      {% else %}
+      <div class = "container" my-5>
+        <br>
+      <p> <b>  Hello </b> </p>
+      <p>  <b>This is the place where boomers can help each other and contribtue to other generations. </b></p>
+    </div>
+      {% endif %}
+      </div>
+      <div class = "container">
+        <br>
+        <form method = "GET" action = "{% url 'home'%}">
+            <input type ="text" name ="q" placeholder ="Search"/>
+        </form>
+        </div>
+      <hr>
 
     {% if messages %}
     <ul class = "messages">
