--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -3,7 +3,7 @@
 <style>
     .home-container{
         display:grid;
-        grid-template-columns: 1fr 2.5fr 0.5fr 1fr;
+        grid-template-columns: 1fr 0.25fr 2.5fr 0.25fr 1fr;
     }
 </style>
 <div class = "container my-5">
@@ -22,12 +22,15 @@
                 {% endfor %}
             </ul>
         </div>
-
+    <div>  </div>
         <div>
             <br>
             <h5>{{room_count}} rooms available </h5>
             <br>
-            <a href = "{% url 'create-room' %}" >Create Room</a>
+            <a href = "{% url 'create-room' %}" >
+                <button class ="button is-dark is outlined is fullwidth">
+                Create Room</a>
+                </button>
             <hr>
             <div>
                 {% for room in rooms %}
@@ -38,6 +41,7 @@
                     {% endif %}
                     <br>
                     <a href = "{% url 'user-profile' room.host.id %}">@{{ room.host.username }} </a>
+                     &emsp;{{ room.created }}
                     <h5> {{ room.id }} -- <a href= "{% url 'room' room.id %}">{{ room.name }}</a> </h5>
                     <small> {{ room.topic.name }}</small>
                     <hr>
@@ -55,7 +59,8 @@
             <hr>
             {% for message in room_messages %}
             <div>
-                <small><a href ="{% url 'user-profile' message.user.id %}"> @{{ message.user }} {{ message.created|timesince }}</</small>
+                
+                <small><a href ="{% url 'user-profile' message.user.id %}"> @{{ message.user }} {{ message.created|timesince }}</small>
                 <small>replied to "{{ message.room }} "</small>
 
                 <p>{{ message }}</p>
