--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -40,7 +40,7 @@
                     &ensp;<a href = "{% url 'delete-room' room.id %}">Delete</a>
                     {% endif %}
                     <br>
-                    <a href = "{% url 'user-profile' room.host.id %}">@{{ room.host.username }} </a>
+                    <a href = "{% url 'profile' room.host.id %}">@{{ room.host.username }} </a>
                      &emsp;{{ room.created }}
                     <h5> {{ room.id }} -- <a href= "{% url 'room' room.id %}">{{ room.name }}</a> </h5>
                     <small> {{ room.topic.name }}</small>
@@ -60,7 +60,7 @@
             {% for message in room_messages %}
             <div>
                 
-                <small><a href ="{% url 'user-profile' message.user.id %}"> @{{ message.user }} {{ message.created|timesince }}</small>
+                <small><a href ="{% url 'profile' message.user.id %}"> @{{ message.user }} {{ message.created|timesince }}</small>
                 <small>replied to "{{ message.room }} "</small>
 
                 <p>{{ message }}</p>
