--- a/app/templates/app/profile.html
+++ b/app/templates/app/profile.html
@@ -1,21 +1,91 @@
 {% extends 'main.html' %}
 {% block content %}
 
-{% for profile in profile3 %}
+<style>  
+    .home-container{
+          display:grid;
+          grid-template-columns:  0.5fr 5.5fr 4fr;
+      } 
+</style>
+<div class="home-container">
+        <div></div>
+    <div>
+        <div class="block">
+        <h1 class="title is-1">
+            {{profile.user.username}}'s Message
+            {% for message in profile.user.message.all %}
+        </h1>
+            <div class="box">
+                {{ message.body }}
+                <span class="is-small has-text-grey-light">
+                    ({{ message.created_at }})
+                </span>
+            </div>
+        </div>
+        
+        <form method="post">
+            {% csrf_token %}
+            <div class="buttons has-addons">
+                {% if profile in user.profile.follows.all %}
+                <button class="button is-success is-static">Follow</button>
+                <button class="button is-danger" name="follow" value="unfollow">
+                    Unfollow
+                </button>
+                {% else %}
+                <button class="button is-success" name="follow" value="follow">
+                    Follow
+                </button>
+                <button class="button is-danger is-static">Unfollow</button>
+                {% endif %}
+                {% endfor %}
+            </div>
+        </form>   
 
-    <div class="block">
-        <div class="card">
-            <a href="{% url 'user-profile' profile.id %}">
-                <div class="card-content">
-                    <!-- ... More card code -->
-                    {{profile.id}}{{profile.user.username}}
-                </div>
+
+
+    </div>
+    <div>
+        <div class="block my-5">
+            <a href="{% url 'profile_list' %}">
+                <button class="button is-dark is-outlined is-fullwidth">
+                    All Profiles
+                </button>
             </a>
+        </div>
+
+        <div class="block">
+            <h3 class="title is-4">
+                {{profile.user.username}} follows:
+            </h3>
+            <div class="content">
+                <ul>
+                {% for following in profile.follows.all %}
+                    <li>
+                        <a href="{% url 'profile' following.id %}">
+                            {{ following }}
+                        </a>
+                    </li>
+                {% endfor %}
+                </ul>
+            </div>
+        </div>
+
+        <div class="block">
+            <h3 class="title is-4">
+                {{profile.user.username}} is followed by:
+            </h3>
+            <div class="content">
+                <ul>
+                {% for follower in profile.followed_by.all %}
+                    <li>
+                        <a href="{% url 'profile' follower.id %}">
+                            {{ follower }}
+                        </a>
+                    </li>
+                {% endfor %}
+                </ul>
+            </div>
         </div>
     </div>
 
-{% endfor %}
-
-
-
-        {% endblock content %} 
+{% endblock content %}
