--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -32,8 +32,9 @@
             <h5>{{room_count}} rooms available </h5>
             <br>
             <a href = "{% url 'create-room' %}" >
-                <button class ="button is-dark is outlined is fullwidth">
-                Create Room</a>
+                <button class ="button is-dark is outlined is fullwidth">Create Room
+
+            </a>
                 </button>
             <hr>
             <div>
@@ -46,8 +47,9 @@
                     <br>
 
                     {% if user.is_authenticated %}
-                    <a href = "{% url 'user-profile' room.host.id %}">@{{ room.host.username }} </a>
-                     &emsp;{{ room.created }}
+                    hosted by @{{ room.host.username }}<br>
+                    created on {{ room.created }}<br>
+                    <br>
                      <h5> {{ room.id }} -- <a href= "{% url 'room' room.id %}">{{ room.name }}</a> </h5>
                      <small> {{ room.topic.name }}</small>
                      <hr>
@@ -69,16 +71,19 @@
             <h4>Recent Activity</h4>
             <hr>
             {% if user.is_authenticated %}
+            {% for room in rooms %}
             {% for message in room_messages %}
+
             <div>
-                <small><a href ="{% url 'user-profile' message.user.id %}"> @{{ message.user }} {{ message.created|timesince }}</small>
-                <small>replied to "{{ message.room }} "</small>
+                <small><a href ="{% url 'user-profile' message.user.id %}"> @{{ message.user }} </a> {{ message.created|timesince }}</small><br>
+                <small><a href= "{% url 'room' room.id %}">{{ room.name }}</a> replied to "{{ message.room }} "</small>
                 <p>{{ message }}</p>
                 <hr>
-                {% if request.user == mesage.user %} 
+                {% if request.user == message.user %} 
                 <a href = "{% url 'delete-message' message.id %}"> Delete</a>
                 {% endif %}
             </div>
+            {% endfor %}
             {% endfor %}
             {% else %} 
             <P> please log in to see recent activity by registred users</P>
