--- a/app/templates/app/profile.html
+++ b/app/templates/app/profile.html
@@ -1,19 +1,39 @@
 {% extends 'main.html' %}
+{% load static %}
 {% block content %}
-
+<style>  
+    .home-container{
+          display:grid;
+          grid-template-columns: 1.5fr 6fr 1.5fr;
+    
+      } 
+    .card-content{
+        display:grid;
+        grid-template-columns: 0.5fr 3fr 5.5fr;
+    }
+</style>
 {% for profile in profile3 %}
-
-    <div class="block">
-        <div class="card">
-            <a href="{% url 'user-profile' profile.id %}">
-                <div class="card-content">
-                    <!-- ... More card code -->
-                    {{profile.id}}{{profile.user.username}}
+<div class ="home-container">
+    <div></div>
+        <div class="card my-2">
+            <div class="card-content">
+                <div></div>
+                <div>
+                <img src ="{% static 'images/admin.jpg' %}" alt ="placeholder image" height= 48px>
                 </div>
-            </a>
+                <a href="{% url 'user-profile' profile.id %}">
+                <div class="card-content">
+                    {{profile.id}}{{profile.user.username}}<br>
+                </div>
+                </a>
+            
+            </div>
         </div>
-    </div>
+    <div>
 
+        
+    </div>
+</div>
 {% endfor %}
 
 
