--- a/templates/main.html
+++ b/templates/main.html
@@ -26,7 +26,7 @@
                   {% if user.is_authenticated %}
                       <a class="nav-item nav-link" href="{% url 'logout'%}">Log out</a>
                       <a class="nav-item nav-link" href="{% url 'register'%}">Register</a>
-                      <a class="nav-item nav-link" href="{% url 'user-profile' user.id%}">Profile</a>
+                      <a class="nav-item nav-link" href="{% url 'profile'%}">Profile</a>
                   {% else %}
                       <a class="nav-item nav-link" href="/accounts/login">Log in</a> 
                       <a class="nav-item nav-link" href="/accounts/signup">Sign up</a>         
