--- a/app/templates/app/profile.html
+++ b/app/templates/app/profile.html
@@ -12,6 +12,11 @@
         grid-template-columns: 0.5fr 3fr 5.5fr;
     }
 </style>
+<div class ="container">
+<h1> User list</h1>
+<br>
+<P> <b>This is the list of users. Click on the link of the user to check their profile and to follow.</b></P>
+</div>
 {% for profile in profile3 %}
 <div class ="home-container">
     <div></div>
