--- a/app/templates/app/room.html
+++ b/app/templates/app/room.html
@@ -5,20 +5,17 @@
 <style>
     .room-container{
         display: grid;
-        grid-template-columns: 0.5fr 3fr 0.5fr 1fr;
+        grid-template-columns: 0.5fr 3fr 0.5fr 1fr 0.5fr;
     }
 </style>
 
-<div class = "room-container">
+<div class = "room-container my-5">
     <div></div>
     <div>
-
         <h3>{{room.name}}</h3>
         <p> {{room.description}}</p>
-
-        <div class ="comment-wapper my-5">
-            
-            <h4>Conversation</h4>
+        <div class ="comment-wapper my-5">    
+            <h4>Posts</h4>
             <hr>
             {% for message in room_messages %}
                 <div>
@@ -43,17 +40,21 @@
         {% endif %}
     </div>
     <div></div>
+
     <div>
         
         <h4>Participants</h4>
         <hr>
         {% for user in participants %} 
-            <div>
-                <p>@{{ user.username }}</p>
-            </div>
+        <div>
+            <div class="card my-3">
+            <p>@{{ user.username }}</p>
+        </div>
+    </div>
         {% endfor %}
     </div>
-
+    
+    <div></div>
 
 </div>
 
