--- a/templates/main.html
+++ b/templates/main.html
@@ -23,10 +23,11 @@
                   <a class="nav-item nav-link" href="{% url 'home'%}" >Home</a>
                 </div>
               <div class="navbar-nav">
-                  {% if user.is_authenticated %}
+                  {% if request.user.is_authenticated %}
                       <a class="nav-item nav-link" href="{% url 'logout'%}">Log out</a>
-                      <a class="nav-item nav-link" href="{% url 'register'%}">Register</a>
-                      <a class="nav-item nav-link" href="{% url 'profile'%}">Profile</a>
+                   <!--   <a class="nav-item nav-link" href="{% url 'register'%}">Register</a>-->
+                      <a class="nav-item nav-link" href="{% url 'profile'%}">User List</a>
+          
                   {% else %}
                       <a class="nav-item nav-link" href="/accounts/login">Log in</a> 
                       <a class="nav-item nav-link" href="/accounts/signup">Sign up</a>         
