--- a/app/templates/app/delete.html
+++ b/app/templates/app/delete.html
@@ -1,7 +1,7 @@
 {% extends 'main.html' %}
 
 {% block content %}
-
+<div class = "container">
 <form method = "POST" action= "">
     {% csrf_token %}
     <p> Are you sure you want to delete "{{ obj }}" ? </p>
@@ -9,5 +9,5 @@
     <a href ="{{request.META.HTTP_REFERER}}"> Go Back</a>
     <input type = "Submit" value="Confirm" />
 </form>
-
+</div>
 {% endblock content %}
