--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -5,6 +5,8 @@
         display:grid;
         grid-template-columns: 1.25fr 0.25fr 2.5fr 0.25fr 1.5fr;
     }
+    
+
 </style>
 <div class="container my-5">
     <div class="home-container">
@@ -12,15 +14,17 @@
             <h3>Topics</h3>
             <ul class="topics_list my-3">
             <li>
-                <a href="{% url 'home' %}" class="active">All </a><span> &emsp;{{ topic.count }}</span>
+                <a href="{% url 'home' %}" class="active">All </a><span> &emsp;{{ topics.count }} topics</span>
             </li>
+            <hr>
+            <br>
             {% for topic in topics %}
                 {% if user.is_authenticated %}
                     <li>  
                         <a href="{% url 'home' %}?q={{topic.name}}">{{ topic.name }} </a> 
-
                         <span>&emsp;{{ topic.room_set.all.count }} rooms</span>
                     </li>
+                    <br>
                 {% else %}  
                     <a href="{% url 'login' %} ">{{ topic.name }}</a>
                     <br>
@@ -50,8 +54,8 @@
 
                     {% if user.is_authenticated %}
         
-                    hosted by @{{ room.host.username }}<br>
-                    created on {{ room.created }}<br>
+                    <b>hosted by</b> @{{ room.host.username }}&emsp;
+                    <b>created on</b> {{ room.created|timesince }} ago<br>
                     <br>
                      <h5> {{ room.id }} -- <a href= "{% url 'room' room.id %}">{{ room.name }}</a> </h5>
                      <small> {{ room.topic.name }}</small>
@@ -81,15 +85,19 @@
             {% for message in room_messages %}
 
             <div>
-                <small><a href ="{% url 'user-profile' message.user.id %}"> @{{ message.user }} </a> {{ message.created|timesince }}</small><br>
-                <small> replied to {{ message.room }}</a></small>
-                <p>{{ message }}</p>
                 <hr>
+                <small><a href ="{% url 'user-profile' message.user.id %}"> @{{ message.user }} </a> {{ message.created|timesince }}</small><br>
+                <small> replied to <a href="{% url 'room' message.room.id %}"> {{ message.room }}</a></small>
+               <p>{{ message }} </p> 
                 {% if request.user == message.user %} 
+                
                 <a href = "{% url 'delete-message' message.id %}"> Delete</a>
+        
+    
                 {% endif %}
+                
+                {% endfor %}
             </div>
-            {% endfor %}
             {% else %} 
             <P> please log in to see recent activity by registered users</P>
             {% endif %}
