--- a/app/templates/app/room.html
+++ b/app/templates/app/room.html
@@ -1,14 +1,12 @@
 {% extends 'main.html' %}
-
+{% load static %}
 {% block content %}
-
 <style>
     .room-container{
         display: grid;
-        grid-template-columns: 0.5fr 3fr 0.5fr 1fr 0.5fr;
+        grid-template-columns: 0.5fr 3fr 0.5fr 1.5fr 0.5fr;
     }
 </style>
-
 <div class = "room-container my-5">
     <div></div>
     <div>
@@ -20,15 +18,15 @@
             {% for message in room_messages %}
                 <div>
                     {% if request.user == message.user %}
-                    <a href="{% url 'delete-message' message.id %}">Delete</a>
+                    <a href="{% url 'delete-message' message.id %}">Delete</a><br>
                     {% endif %}
-                    <small>@{{ message.user }} {{ message.created|timesince }} ago </small>
+
+                    <small><a href= "{% url 'user-profile' message.user.id %}">@{{ message.user }}</a>  &emsp;{{ message.created|timesince }} ago </small>
                     <p> {{ message.body }} </p>
                     <hr>
                 </div>
             {% endfor %}
         </div>
-
             {% if request.user.is_authenticated %}
             <div class="comment-form">
             <form method ="POST" actions="">
@@ -42,17 +40,28 @@
     <div></div>
 
     <div>
-        
-        <h4>Participants</h4>
+        <div class ="container">
+        <h4>Host</h4>
+        {{room.host}}
+    </div>
+    <div class="container my-5">
+        <h4>Participants  </h4>
+        &emsp;{{participants.count}} joined
         <hr>
         {% for user in participants %} 
         <div>
             <div class="card my-3">
+                <a href = "{% url 'user-profile' user.id %}" class="participant">
+                
+            
             <p>@{{ user.username }}</p>
         </div>
     </div>
+
+</a>
         {% endfor %}
     </div>
+</div>
     
     <div></div>
 
