--- a/templates/main.html
+++ b/templates/main.html
@@ -14,19 +14,20 @@
       <header class="site-header">
         <nav class="navbar navbar-expand-lg navbar-dark bg-secondary fixed-top">
           <div class="container">
-            <a class="navbar-brand mr-4" href="{%url 'home'%}">Boomers 🤝 Millenials</a>
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand mr-4" href="{%url 'home'%}">Boomers 🤝 Millenials</a> &emsp;
+              <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
-              </button>
+              </button> -->
               <div class="collapse navbar-collapse" id="navbarToggle">
                 <div class="navbar-nav mr-auto">
-                  <a class="nav-item nav-link" href="{% url 'home'%}" >Home</a>
+                  <a class="nav-item nav-link" href="{% url 'home'%}" >Home</a> &emsp;
                 </div>
               <div class="navbar-nav">
                   {% if request.user.is_authenticated %}
-                      <a class="nav-item nav-link" href="{% url 'logout'%}">Log out</a>
-                   <!--   <a class="nav-item nav-link" href="{% url 'register'%}">Register</a>-->
-                      <a class="nav-item nav-link" href="{% url 'profile'%}">User List</a>
+                  <!--   <a class="nav-item nav-link" href="{% url 'register'%}">Register</a>-->
+                  <a class="nav-item nav-link" href="{% url 'profile'%}">User List</a> &emsp;
+                  <a class="nav-item nav-link" href="{% url 'user-profile' request.user.id%}">My Profile</a> &emsp;
+                  <a class="nav-item nav-link" href="{% url 'logout'%}">Log out</a> &emsp;
           
                   {% else %}
                       <a class="nav-item nav-link" href="/accounts/login">Log in</a> 
@@ -59,6 +60,7 @@
               <input type ="text" name ="q" placeholder ="Search rooms"/>
           </form>
           </div>
+          <br>
         <hr>
       {% if messages %}
       <ul class = "messages">
