--- a/app/templates/app/profile.html
+++ b/app/templates/app/profile.html
@@ -33,7 +33,7 @@
             <div class="card-content">
                 <div></div>
                 <div>
-                <img src ="{% static 'images/admin.jpg' %}" alt ="placeholder image" height= 48px>
+                <img src ="{% static 'images/default-profile-image.png' %}" alt ="placeholder image" height= 48px>
                 </div>
                 <a href="{% url 'user-profile' profile.id %}">
                 <div class="card-content">
