--- a/app/templates/app/update-user.html
+++ b/app/templates/app/update-user.html
@@ -2,5 +2,13 @@
 
 {% block content %}
 
-
+<div>
+    <div class = "container">
+    <form method="POST action=">
+        {% csrf_token %}
+        {{form.as_p}}
+        <input type="submit" value="Update" />
+    </form>
+</div>
+</div>
 {% endblock content %} 
