--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -1,3 +1,6 @@
+*{
+  font-family:Tahoma;
+}
 .search-wrapper {
     display: flex;
     flex-direction: column;
@@ -15,6 +18,6 @@
   
 body { 
     background-color:rgb(231, 234, 238);
-    font-family:Tahoma;
+    
 
 }
