--- a/app/templates/app/profile_list.html
+++ b/app/templates/app/profile_list.html
@@ -1,24 +1,102 @@
 {% extends 'main.html' %}
 {% load static %}
+
 {% block content %}
 
 <style>  
   .home-container{
         display:grid;
-        grid-template-columns: 1fr 4fr 4fr;
+        grid-template-columns: 0.5fr 4fr 0.5fr 4fr;
     } 
 </style>
-<div class = "container my-5" >
+<div class = "container my-5 padding-bottom= 20pxs" >
 
   <div class ="home-container">
     <div></div>
     <div>
-      <h2>{{ user|upper }}'s Profile </h2>
-          <br>
-          <img src ="{{Profile.image.url}}" alt ="placeholder image" height =200px>
+    <!-- {{profile2}}
+    <p>a</p>
+    {{user}}
+    <p>b</p>
+    {{profile}}
+    <p>user name{{user.username}}</p>
+    <p>dd</p>
+    {{request.user}} -->
 
-          <p>Bio</p>
-           {{user.bio}}
+    {% if user %} 
+    <h2>{{ profile }}'s Profile </h2>
+    <!-- left column -->
+    <div class ="card my-5" >
+      <div class="card-content">                    
+                <ul>
+                  
+                  <h3 style="font-size: large"> {{ user }} follows </h3>
+                    {% for following in profiles.follows.all %}
+                      {% if following != profiles %}
+                        <li>
+                          <a href = "{% url 'user-profile' following.id %}"> {{ following }} </a>                     
+                        </li>
+                      {% endif %}
+                    {% endfor %}
+                </ul>           
+                    <hr>
+                <ul>
+                  <h3 style ="font-size: large">{{ user }} is followed by </h3>
+                    {% for follower in profiles.followed_by.all %} 
+                      {% if follower != profiles %}            
+                        <li>
+                          <a href ="{% url 'user-profile' follower.id %}"> {{ follower }} </a>            
+                        </li>
+                      {% endif %}
+                    {% endfor %}
+              
+                </ul>                         
+            
+          </a>
+        
+        </div>
+    </div>  
+    {% else %}
+
+  
+    <h2> {{request.user}} pofile</h2>
+    <div class ="card my-5" >
+      <div class="card-content ">                    
+                <ul>
+                  
+                  <h3 style="font-size: large"> {{ request.user }} follows </h3>
+                
+                  
+                    {% for following in profiles.follows.all %}
+                      {% if following != profiles %}
+                        <li>
+                          <a href = "{% url 'user-profile' following.id %}"> {{ following }} </a>                     
+                        </li>
+                      {% endif %}
+                    {% endfor %}
+                </ul>           
+                    <hr>
+                <ul>
+                  <h3 style ="font-size: large">{{ request.user }} is followed by </h3>
+                    {% for follower in profiles.followed_by.all %} 
+                      {% if follower != profiles %}            
+                        <li>
+                          <a href ="{% url 'user-profile' follower.id %}"> {{ follower }} </a>            
+                        </li>
+                      {% endif %}
+                    {% endfor %}
+              
+                </ul>                         
+            
+          </a>
+        
+        </div>
+    </div>  
+   
+    
+    {% endif %}
+
+         
       <form method="POST">
         {% csrf_token %}
         <div class="buttons has-addons my-5">
@@ -44,46 +122,30 @@
         {% endfor %}
       </div>    
     </div>
+    <!-- end of left column-->
+    <div></div>
+    <!-- right column -->
     <div>  
       
+
+        <img class="profile-pic" src ="{% static 'images/admin.jpg' %}" alt ="placeholder image" height =200px> 
+       {#<!--   <img class="profile-pic" src ="{{request.user.image.url}}" alt ="placeholder image" height =200px>-->#}
+      
+      <div class ="card my-5" >
+          Bio
+          <hr>
+           {{user.bio}}
+      </div>
+      <div class ="card my-5" >
+        Skill
+        <hr>
+         {{user.skill}}
+      </div>
         <a href = "{% url 'update-user'%}">
           <button class="button is-dark is-outlined is fullwidth my-5">Edit my profile</button>
-        </a>
-      
-          <div class ="card" >
-            <div class="card-content">      
-                <figure class="image is-48x48"></figure>               
-                      <ul>
-                        <h3 style="font-size: large"> {{ user }} follows </h3>
-                          {% for following in profiles.follows.all %}
-                            {% if following != user %}
-                              <li>
-                                <a href = "{% url 'user-profile' following.id %}"> {{ following }} </a>                     
-                              </li>
-                            {% endif %}
-                          {% endfor %}
-                      </ul>           
-                          <hr>
-                      <ul>
-                        <h3 style ="font-size: large">{{ user }} is followed by </h3>
-                          {% for follower in profiles.followed_by.all %} 
-                            {% if follower != user %}            
-                              <li>
-                                <a href ="{% url 'user-profile' follower.id %}"> {{ follower }} </a>            
-                              </li>
-                            {% endif %}
-                          {% endfor %}
-                      </ul>                         
-                  
-                </a>
-              
-              </div>
-
-          </div>  
-
-
-          
+        </a>          
    </div>
+   <!-- left column -->
   </div>
 </div>
 {% endblock content %}
