--- a/app/templates/app/login_register.html
+++ b/app/templates/app/login_register.html
@@ -8,7 +8,7 @@
         <p> Have you sign up yet? Sing up here ?</p>
         
         {% csrf_token %}
-        <a href = '/accounts/login'>sing in with google</a>
+        <a href = '/accounts/login'>sign in with google</a>
         <!-- <label>Username:</label>
         <input type="text" name ="username" placeholer = "Enter Username" />
 
