--- a/templates/main.html
+++ b/templates/main.html
@@ -16,7 +16,7 @@
       <header class="site-header">
         <nav class="navbar navbar-expand-lg navbar-dark bg-secondary fixed-top">
           <div class="container">
-            <a class="navbar-brand mr-4" href="{%url 'home'%}">Boomers 🤝 Millenials</a> &emsp;
+            <a class="navbar-brand mr-4" href="{%url 'home'%}">Boomers 🤝 Millennials</a> &emsp;
               <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
               </button> -->
@@ -29,7 +29,7 @@
                   <!--   <a class="nav-item nav-link" href="{% url 'register'%}">Register</a>-->
                   <a class="nav-item nav-link" href="{% url 'create-room' %}">Create room</a> &emsp;
                   <a class="nav-item nav-link" href="{% url 'profile'%}">User List</a> &emsp;
-                  {# <a class="nav-item nav-link" href="{% url 'user-profile' request.user.id%}">My Profile</a> &emsp; #}
+                   {#<a class="nav-item nav-link" href="{% url 'user-profile' request.user.id%}">My Profile</a> &emsp; #}
                   <a class="nav-item nav-link" href="{% url 'logout'%}">Log out</a> &emsp;
           
                   {% else %}
