--- a/app/templates/app/update-user.html
+++ b/app/templates/app/update-user.html
@@ -10,17 +10,17 @@
             {% csrf_token %}
             {% for field in form %}
             <div class="form__group">
-                <label for="profile_pic">{{field.label}}</label>
+                <label for="image">{{field.label}}</label>
                 {{field}}
               </div>
               {% endfor %}
 
               <div class="form__action">
-                <a class="btn btn--dark" href="index.html">Cancel</a>
-                <button class="btn btn--main" type="submit">Update</button>
+                <a class="btn btn--dark" href="{% url 'profile' %}">Cancel</a>
+                <input class="btn btn-primary" type="submit" name="Update Information">
               </div>
             
-            <input class="btn btn-primary" type="submit" name="Update Information">
+          
           </form>
     </div>
 </div>
