--- a/app/templates/app/profile_list.html
+++ b/app/templates/app/profile_list.html
@@ -137,7 +137,12 @@
     <div></div>
     <!-- right column -->
     <div>  
-       {# <img src ="{{user.image.url}}" alt ="placeholder image" height =200px /> #}
+        <img src ="{{user.image.url}}" alt ="placeholder image" height =200px /> 
+      <div class ="card my-5" >
+        Generation
+        <hr>
+          {{user.generation}}
+    </div>
       
       <div class ="card my-5" >
           Bio
