--- a/app/templates/app/update-user.html
+++ b/app/templates/app/update-user.html
@@ -4,15 +4,17 @@
 
 <div>
 
-    <a href="{% url 'home' %}"> </a>
+    <a href="{% url 'user-profile' user.id %}"> </a>
     <div class = "container">
-        <form method="POST" action="" method="POST" enctype="multipart/form-date">
+        <form method="POST" action=""  enctype="multipart/form-data">
             {% csrf_token %}
             {% for field in form %}
+          
             <div class="form__group">
                 <label for="image">{{field.label}}</label>
                 {{field}}
               </div>
+              
               {% endfor %}
 
               <div class="form__action">
