--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -53,7 +53,7 @@
 
                     {% if user.is_authenticated %}
         
-                    <b>hosted by</b> @{{ room.host.username }}&emsp;
+                    <b>hosted by</b> {{ room.host.username }}&emsp;
                     <b>created on</b> {{ room.created|timesince }} ago<br>
                     <br>
                      <h5> {{ room.id }} -- <a href= "{% url 'room' room.id %}">{{ room.name }}</a> </h5>
@@ -80,8 +80,9 @@
                 <source src ="{% static 'images/Boomers - Google Chrome 2022-03-25 06-24-30.mp4' %}" type='video/mp4'> </source>
                 Video
             </video>
-            
+            <div class="container my-5">
             <a href = http://localhost:8000/room/4/ >Ask for help here</a>
+        </div>
         </div>
             <div class="container my-5">
             <h4>New Posts</h4>
@@ -91,7 +92,7 @@
 
             <div>
                 <hr>
-                <small><a href ="{% url 'user-profile' message.user.id %}"> @{{ message.user }} </a> {{ message.created|timesince }}</small><br>
+                <small> @{{ message.user }} </a> {{ message.created|timesince }}</small><br>
                 <small> replied to <a href="{% url 'room' message.room.id %}"> {{ message.room }}</a></small>
                <p>{{ message }} </p> 
                 {% if request.user == message.user %} 
